@@ -63,6 +63,7 @@ Kamil Andrusz <wizz*mniam.net>
 Patrick Bihan-Faou <patrick*mindstep.com>
 Len Budney <lbudney*pobox.com>
 Andrey Cherezov <andrey*cherezov.koenig.su>
+Alex Cherney <alex*cher.id.au>
 Tom G. Christensen <tgc*statsbiblioteket.dk>
 Damien Curtain <damien*pagefault.org>
 Michael Dankov <misha*btrc.ru>
