@@ -32,4 +32,4 @@ sigtool_LDADD = $(top_builddir)/clamscan/others.o
 
 DEFS = @DEFS@
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/shared -I$(top_srcdir)/libclamav
-LIBS = -L$(top_builddir)/libclamav -lclamav @FRESHCLAM_LIBS@
+LIBS = -L$(top_builddir)/libclamav -lclamav @FRESHCLAM_LIBS@ @ADDITIONAL_LIBS@
